<resources>
    <string name="app_name">todo</string>
    <string name="list_of_task">Список задач</string>
    <string name="zero">0</string>
    <string name="folder">Папка</string>
    <string name="add_folder">Добавить папку</string>
    <string name="folders">Папки</string>
    <string name="add_task">Добавить задачу</string>
    <string name="task">Задание</string>
    <string name="date">Дата</string>
    <string name="tasks">Задачи</string>
    <string name="add_date">Добавить дату выполнения</string>
    <string name="repeating">Повтор</string>
    <string name="add_note">Добавить заметку</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="indefinitely">Бессрочно</string>
    <string name="daily">Ежедневно</string>
    <string name="weekly">Еженедельно</string>
    <string name="monthly">Ежемесячно</string>
    <string name="annually">Ежегодно</string>
    <string name="to_configure">Настроить</string>
    <string name="day">дн.</string>
    <string name="week">нед.</string>
    <string name="year">г.</string>
    <string name="no_note">Заметок нет</string>
    <string name="name">Название</string>
</resources>