<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListOfTasksFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_5x" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/gl_left"
        app:layout_constraintTop_toBottomOf="@id/gl_top">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/back_icon"
            app:layout_constraintBottom_toBottomOf="@id/tv_back"
            app:layout_constraintStart_toStartOf="@id/cl_button_back"
            app:layout_constraintTop_toTopOf="@id/tv_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_back"
            style="@style/main_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_1x"
            android:text="@string/folders"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/iv_back"
            app:layout_constraintTop_toTopOf="@id/cl_button_back" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_folder_name"
        style="@style/main_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/folder"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/gl_right"
        app:layout_constraintStart_toEndOf="@id/gl_left"
        app:layout_constraintTop_toBottomOf="@id/cl_button_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_2x"
        android:layout_marginBottom="@dimen/space_4x"
        app:layout_constraintBottom_toTopOf="@id/cl_add_task"
        app:layout_constraintEnd_toStartOf="@id/gl_right"
        app:layout_constraintStart_toEndOf="@id/gl_left"
        tools:listitem="@layout/view_holder_task"
        tools:itemCount="8"
        app:layout_constraintTop_toBottomOf="@id/tv_folder_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_add_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_5x"
        android:background="@drawable/item_background"
        android:padding="@dimen/space_4x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_right"
        app:layout_constraintStart_toEndOf="@id/gl_left">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_plus"
            android:layout_width="@dimen/space_4x"
            android:layout_height="@dimen/space_4x"
            android:src="@drawable/plus_icon"
            app:layout_constraintBottom_toBottomOf="@id/tv_add_folder"
            app:layout_constraintStart_toStartOf="@id/cl_add_task"
            app:layout_constraintTop_toTopOf="@id/tv_add_folder"
            app:tint="@color/main_color" />

        <TextView
            android:id="@+id/tv_add_folder"
            style="@style/add_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:text="@string/add_task"
            app:layout_constraintStart_toEndOf="@id/iv_plus"
            app:layout_constraintTop_toTopOf="@id/cl_add_task" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>