<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.listOfFolders.ListOfFoldersFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_5x" />

    <ImageView
        android:id="@+id/iv_list_of_tasks"
        android:layout_width="@dimen/space_4x"
        android:layout_height="@dimen/space_4x"
        android:src="@drawable/to_do_list_icon"
        app:layout_constraintBottom_toBottomOf="@id/tv_list_of_tasks"
        app:layout_constraintStart_toEndOf="@id/gl_left"
        app:layout_constraintTop_toTopOf="@id/tv_list_of_tasks"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_list_of_tasks"
        style="@style/medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4x"
        android:text="@string/list_of_task"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/iv_list_of_tasks"
        app:layout_constraintTop_toBottomOf="@id/gl_top" />

    <TextView
        android:id="@+id/tv_count_of_tasks"
        style="@style/transparent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="#78909C"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_list_of_tasks"
        app:layout_constraintEnd_toStartOf="@id/gl_right"
        app:layout_constraintTop_toTopOf="@id/tv_list_of_tasks" />

    <View
        android:id="@+id/view_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/space_4x"
        android:background="@color/white_10_per"
        app:layout_constraintEnd_toStartOf="@id/gl_right"
        app:layout_constraintStart_toEndOf="@id/gl_left"
        app:layout_constraintTop_toBottomOf="@id/tv_list_of_tasks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_folders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="@dimen/space_4x"
        app:layout_constraintBottom_toTopOf="@id/cl_add_folder"
        app:layout_constraintEnd_toStartOf="@id/gl_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/gl_left"
        app:layout_constraintTop_toBottomOf="@id/view_line"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="24"
        tools:listitem="@layout/view_holder_folder" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_add_folder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_5x"
        android:background="@drawable/item_background"
        android:padding="@dimen/space_4x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_right"
        app:layout_constraintStart_toEndOf="@id/gl_left">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_plus"
            android:layout_width="@dimen/space_4x"
            android:layout_height="@dimen/space_4x"
            android:src="@drawable/plus_icon"
            app:layout_constraintBottom_toBottomOf="@id/tv_add_folder"
            app:layout_constraintStart_toStartOf="@id/cl_add_folder"
            app:layout_constraintTop_toTopOf="@id/tv_add_folder"
            app:tint="@color/main_color" />

        <TextView
            android:id="@+id/tv_add_folder"
            style="@style/add_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:text="@string/add_folder"
            app:layout_constraintStart_toEndOf="@id/iv_plus"
            app:layout_constraintTop_toTopOf="@id/cl_add_folder" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>